test: coverage-raising round 3 (8 modules)
scirenderer 380->461, renderer 96->201, graph 178->209, console 137->166,
graphic_objects ->769, helptools ->279, commons ->142, jvm ->34. All green
(full reactor strict). Extended tests over remaining jacoco gaps + new g2d/texture/
handler/action classes.